change background color

--- a/main.css
+++ b/main.css
@@ -28,9 +28,9 @@
   
   body {
   
-    --bgColor: #e0e0e0;
+    --bgColor: #0060f0;
   
-    --borderColor: #727272;
+    --borderColor: #ffadda;
   
     --statsBgColor: white;
   
